@@ -1,6 +1,6 @@
 {
   "name": "simp-named",
-  "version": "6.0.2",
+  "version": "6.0.3",
   "author": "SIMP Team",
   "summary": "manages either a chrooted named process or a caching nameserver",
   "license": "Apache-2.0",
@@ -28,7 +28,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.6.0 < 4.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
