@@ -1,5 +1,5 @@
 HOSTS:
-  server5:
+  el7:
     roles:
       - server
       - default
@@ -9,17 +9,15 @@ HOSTS:
       - el7
     platform:   el-7-x86_64
     box:        centos/7
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
     hypervisor: vagrant
 
-  server4:
+  el6:
     roles:
       - simp_server
       - nfs_server
       - el6
     platform:   el-6-x86_64
     box:        centos/6
-    box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
     hypervisor: vagrant
 
 CONFIG:
